# wandb-fortran

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build_fpm.sh  ford.md  fpm.toml
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  index.rst  install.rst  usage.rst
docs/source/tutorials/: athena.rst  fiats.rst  neural_fortran.rst  sweep.rst  tutorials.rst
example/athena_logging/src/: main.f90
example/fiats_logging/src/: main.f90
example/neural_fortran_logging/src/: main.f90
example/wandb_sweep/src/: main.f90
include/: wandb.h
src/: wf.f90  wf_c.c  wf_c.h
src/wf/: wf_c_bindings.f90  wf_config.f90  wf_run.f90  wf_sweep.f90
test/: test_logging.f90
tools/: setup_env.sh
